Alterações de melhorias