@@ -3,88 +3,176 @@ package br.com.dio;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Scanner;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Main {
 
-    private final static Scanner scanner = new Scanner(System.in);
-
+    private static final Scanner scanner = new Scanner(System.in);
     private static List<BasicBasket> stock = new ArrayList<>();
     private static BigDecimal money = BigDecimal.ZERO;
 
     public static void main(String[] args) {
-        System.out.println("Bem vindo ao sistema de armazém");
-        System.out.println("Selecione a opção desejada");
-        var option = -1;
-        while (true){
-            System.out.println("1 - Verificar estoque de cesta básica");
+        System.out.println("Bem-vindo ao sistema de armazém!");
+
+        while (true) {
+            System.out.println("\nSelecione a opção desejada:");
+            System.out.println("1 - Verificar estoque de cestas básicas");
             System.out.println("2 - Verificar caixa");
-            System.out.println("3 - Receber Cestas");
-            System.out.println("4 - Vender Cestas");
+            System.out.println("3 - Receber cestas");
+            System.out.println("4 - Vender cestas");
             System.out.println("5 - Remover itens vencidos");
             System.out.println("6 - Sair");
-            option = scanner.nextInt();
-            switch (option){
+
+            int option = getIntInput();
+
+            switch (option) {
                 case 1 -> checkStock();
                 case 2 -> checkMoney();
                 case 3 -> receiveItems();
-                case 4 -> soldItems();
+                case 4 -> sellItems();
                 case 5 -> removeItemsOutOfDate();
-                case 6 -> System.exit(0);
+                case 6 -> {
+                    System.out.println("Saindo do sistema...");
+                    System.exit(0);
+                }
+                default -> System.out.println("Opção inválida! Tente novamente.");
             }
         }
     }
 
-    private static void soldItems() {
-        System.out.println("Quantas cestar serão vendidas");
-        var amount = scanner.nextInt();
+    private static void sellItems() {
+        if (stock.isEmpty()) {
+            System.out.println("Estoque vazio! Não há cestas para vender.");
+            return;
+        }
+
+        System.out.println("Quantas cestas serão vendidas?");
+        int amount = getIntInput();
+
+        if (amount <= 0) {
+            System.out.println("Quantidade inválida!");
+            return;
+        }
+
+        if (amount > stock.size()) {
+            System.out.println("Não há cestas suficientes em estoque.");
+            return;
+        }
+
         stock.sort(Comparator.comparing(BasicBasket::price));
-        var toSold = stock.subList(0, amount);
-        var value = toSold.stream().map(BasicBasket::price).reduce(BigDecimal.ZERO, BigDecimal::add);
+        List<BasicBasket> toSell = new ArrayList<>(stock.subList(0, amount));
+        BigDecimal value = toSell.stream()
+                                 .map(BasicBasket::price)
+                                 .reduce(BigDecimal.ZERO, BigDecimal::add);
         money = money.add(value);
-        System.out.printf("O valor da venda é de %s \n", value);
+        stock.removeAll(toSell);
+
+        System.out.printf("Venda realizada! Valor total: R$ %s\n", value);
     }
 
-    private static void checkStock(){
+    private static void checkStock() {
         int amount = stock.size();
-        long outOfDate = stock.stream().filter(b -> b.validate().isBefore(LocalDate.now())).count();
-        System.out.printf("Existem %s cestas em estoque, das quais %s estão fora do prazo de validade \n", amount, outOfDate);
+        long outOfDate = stock.stream()
+                              .filter(b -> b.validate().isBefore(LocalDate.now()))
+                              .count();
+        System.out.printf("Existem %d cestas em estoque, das quais %d estão vencidas.\n", amount, outOfDate);
     }
 
-    private static void checkMoney(){
-        System.out.printf("O caixa no momento é de %s\n", money);
+    private static void checkMoney() {
+        System.out.printf("O caixa no momento é de R$ %s\n", money);
     }
 
-    private static void removeItemsOutOfDate(){
-        var outOfDate = stock.stream().filter(b -> b.validate().isBefore(LocalDate.now())).toList();
-        var lost = outOfDate.stream().map(BasicBasket::price).reduce(BigDecimal.ZERO, BigDecimal::add);
-        stock = stock.stream().filter(b -> b.validate().isBefore(LocalDate.now())).collect(Collectors.toList());
-        System.out.printf("Foram descartadas do estoque %s cestas vencidas, o prejuizo foi de %s \n", outOfDate.size(), lost);
+    private static void removeItemsOutOfDate() {
+        List<BasicBasket> expired = stock.stream()
+                                         .filter(b -> b.validate().isBefore(LocalDate.now()))
+                                         .toList();
+
+        if (expired.isEmpty()) {
+            System.out.println("Nenhuma cesta vencida para remover.");
+            return;
+        }
+
+        BigDecimal loss = expired.stream()
+                                 .map(BasicBasket::price)
+                                 .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        stock = stock.stream()
+                     .filter(b -> !b.validate().isBefore(LocalDate.now()))
+                     .collect(Collectors.toList());
+
+        System.out.printf("Foram descartadas %d cestas vencidas. Prejuízo: R$ %s\n", expired.size(), loss);
     }
 
-    private static void receiveItems(){
-        System.out.println("Informe o valor da entrega");
-        var price = scanner.nextBigDecimal();
-        System.out.println("Informe a quantidade de cestas da entrega");
-        var amount = scanner.nextLong();
-        System.out.println("Informe a data de vencimento");
-        var validate = scanner.next();
-        var day = Integer.parseInt(validate.split("/")[0]);
-        var month = Integer.parseInt(validate.split("/")[1]);
-        var year = Integer.parseInt(validate.split("/")[2]);
-        var box = new Box(amount, LocalDate.of(year, month, day), price);
-        var unitPrice = box.price().divide(new BigDecimal(box.amount()), RoundingMode.CEILING);
-        var finalPrice = unitPrice.add(unitPrice.multiply(new BigDecimal("0.20")));
-        var baskets = Stream.generate(() -> new BasicBasket(box.validate(), finalPrice))
-                .limit(box.amount())
-                .toList();
+    private static void receiveItems() {
+        System.out.println("Informe o valor da entrega:");
+        BigDecimal price = getBigDecimalInput();
+        if (price.compareTo(BigDecimal.ZERO) <= 0) {
+            System.out.println("Valor inválido!");
+            return;
+        }
+
+        System.out.println("Informe a quantidade de cestas da entrega:");
+        int amount = getIntInput();
+        if (amount <= 0) {
+            System.out.println("Quantidade inválida!");
+            return;
+        }
+
+        System.out.println("Informe a data de vencimento (dd/MM/yyyy):");
+        LocalDate validateDate = getDateInput();
+        if (validateDate.isBefore(LocalDate.now())) {
+            System.out.println("Data de validade inválida! Não pode ser no passado.");
+            return;
+        }
+
+        var box = new Box(amount, validateDate, price);
+        BigDecimal unitPrice = box.price()
+                                  .divide(new BigDecimal(box.amount()), RoundingMode.CEILING);
+        BigDecimal finalPrice = unitPrice.add(unitPrice.multiply(new BigDecimal("0.20")));
+
+        List<BasicBasket> baskets = Stream.generate(() -> new BasicBasket(box.validate(), finalPrice))
+                                          .limit(box.amount())
+                                          .toList();
+
         stock.addAll(baskets);
-        System.out.printf("Foram adicionadas %s cestas ao estoque\n", baskets.size());
+        System.out.printf("Foram adicionadas %d cestas ao estoque.\n", baskets.size());
     }
 
+    // Métodos auxiliares
+    private static int getIntInput() {
+        while (!scanner.hasNextInt()) {
+            System.out.println("Entrada inválida. Digite um número inteiro:");
+            scanner.next();
+        }
+        int value = scanner.nextInt();
+        scanner.nextLine(); // limpar buffer
+        return value;
+    }
+
+    private static BigDecimal getBigDecimalInput() {
+        while (!scanner.hasNextBigDecimal()) {
+            System.out.println("Entrada inválida. Digite um valor numérico:");
+            scanner.next();
+        }
+        BigDecimal value = scanner.nextBigDecimal();
+        scanner.nextLine(); // limpar buffer
+        return value;
+    }
+
+    private static LocalDate getDateInput() {
+        while (true) {
+            try {
+                String input = scanner.nextLine();
+                String[] parts = input.split("/");
+                int day = Integer.parseInt(parts[0]);
+                int month = Integer.parseInt(parts[1]);
+                int year = Integer.parseInt(parts[2]);
+                return LocalDate.of(year, month, day);
+            } catch (Exception e) {
+                System.out.println("Data inválida. Digite no formato dd/MM/yyyy:");
+            }
+        }
+    }
 }
